--- a/index.html
+++ b/index.html
@@ -938,7 +938,7 @@
       <div class="nav-left">
         <div class="nav-links">
           <a href="#projects-section" class="nav-link" data-en="Work" data-fa="کارها">Work</a>
-          <a href="#journal-section" class="nav-link" data-en="Journal" data-fa="مجله">Journal</a>
+          <a href="#journal-section" class="nav-link" data-en="Journal" data-fa="ژورنال">Journal</a>
           <a href="#about-section" class="nav-link" data-en="About" data-fa="درباره">About</a>
         </div>
       </div>
@@ -953,7 +953,7 @@
       <div class="hero-container max-w-7xl">
         <!-- ARASH FOOLADI - EXACT SAME IN BOTH LANGUAGES -->
         <h1 class="hero-title">Arash Foolad<span class="special-i">i</span></h1>
-        <p class="tagline" data-en="CS student  building things" data-fa="دانشجوی کامپیوتر  ساختن چیزها">CS student  building things</p>
+        <p class="tagline" data-en="CS student  building things" data-fa="دانشجوی علوم کامپیوتر">CS student  building things</p>
       </div>
     </section>
 
@@ -962,7 +962,7 @@
       <div class="about-container max-w-4xl">
         <h2 class="text-caption mb-8" data-en="About" data-fa="درباره">About</h2>
         <div class="text-body space-y-6 fade-in-up">
-          <p data-en="CS student and developer. I build functional software with a focus on backend logic and architecture. Creator of Yarplus." data-fa="دانشجوی کامپیوتر و توسعه‌دهنده. نرم‌افزارهای کاربردی با تمرکز بر منطق بک‌اند و معماری می‌سازم. خالق Yarplus.">CS student and developer. I build functional software with a focus on backend logic and architecture. Creator of Yarplus.</p>
+          <p data-en="CS student and developer. I build functional software with a focus on backend logic and architecture." data-fa="  . دانشجوی علوم کامپیوتر و توسعه دهنده با تمرکز بر روی بک اند">CS student and developer. I build functional software with a focus on backend logic and architecture. Creator of Yarplus.</p>
         </div>
       </div>
     </section>
@@ -996,9 +996,9 @@
                   <path d="M21.198 2.433a2.242 2.242 0 0 0-1.022.215l-16.5 6.498a2.25 2.25 0 0 0 .126 4.27l3.9 1.296a1.5 1.5 0 0 1 1.024 1.146l.622 4.347a1.5 1.5 0 0 0 2.625.804l2.475-3.037a1.5 1.5 0 0 1 1.146-.538h4.5a2.25 2.25 0 0 0 2.25-2.25V4.5a2.25 2.25 0 0 0-2.046-2.067zM8.25 12a.75.75 0 1 1 0-1.5.75.75 0 0 1 0 1.5z"/>
                 </svg>
               </div>
-              <h3 class="project-title" data-en="Telegram Bot" data-fa="ربات تلگرام">Telegram Bot</h3>
-              <p class="project-desc" data-en="Automated bot for managing group interactions and providing utility commands with webhook integration." data-fa="ربات خودکار برای مدیریت تعاملات گروهی و ارائه دستورات کاربردی با یکپارچه‌سازی وب‌هوک.">Automated bot for managing group interactions and providing utility commands with webhook integration.</p>
-              <span class="project-arrow" data-en="View Project →" data-fa="مشاهده پروژه →">View Project →</span>
+             <h3 class="project-title" data-en="Inline Utility Bot" data-fa="ربات ابزاری اینلاین">Inline Utility Bot</h3>
+<p class="project-desc" data-en="Lightweight Telegram bot leveraging inline mode for instant query responses. Featured a popular group slash command that served thousands of daily active users with minimal overhead." data-fa=".ربات تلگرامی فوق‌سبک با حالت اینلاین و دستور اسلش محبوب در گروه‌ها با هزاران کاربر فعال روزانه">Lightweight Telegram bot leveraging inline mode for instant query responses. Featured a popular group slash command that served thousands of daily active users with minimal overhead.</p>
+<span class="project-arrow" data-en="View Project →" data-fa="مشاهده پروژه →">View Project →</span>
             </div>
           </a>
 
@@ -1012,8 +1012,8 @@
                 </svg>
               </div>
               <h3 class="project-title" data-en="Coming Soon" data-fa="به زودی">Coming Soon</h3>
-              <p class="project-desc" data-en="Currently experimenting with new tools and ideas. Stay tuned for the next project." data-fa="در حال آزمایش ابزارها و ایده‌های جدید. منتظر پروژه بعدی باشید.">Currently experimenting with new tools and ideas. Stay tuned for the next project.</p>
-              <span class="project-arrow" data-en="Explore →" data-fa="کاوش →">Explore →</span>
+              <p class="project-desc" data-en="Currently experimenting with new tools and ideas." data-fa=".در حال آزمایش ابزارها و ایده‌های جدید">Currently experimenting with new tools and ideas. Stay tuned for the next project.</p>
+              <span class="project-arrow" data-en="Explore →" data-fa="coming soon →">coming soon →</span>
             </div>
           </a>
 
@@ -1024,11 +1024,11 @@
     <!-- Journal Preview Section -->
     <section class="journal-section" id="journal-section">
       <div class="max-w-4xl">
-        <h2 class="text-caption mb-8" data-en="Journal" data-fa="مجله">Journal</h2>
+        <h2 class="text-caption mb-8" data-en="Journal" data-fa="ژورنال">Journal</h2>
         <div class="journal-list fade-in-up">
           <a href="/journal/coming-soon" class="journal-item">
             <span class="journal-title" data-en="Coming Soon" data-fa="به زودی">Coming Soon</span>
-            <span class="journal-date">2025</span>
+            <span class="journal-date">202X</span>
           </a>
         </div>
       </div>
@@ -1039,8 +1039,8 @@
       <div class="max-w-7xl">
         <div class="footer-content">
           <div class="footer-left fade-in-up">
-            <h3 class="text-h3 mb-4" data-en="Let's Connect" data-fa="بیایید ارتباط برقرار کنیم">Let's Connect</h3>
-            <p class="text-small" style="color: var(--muted-foreground);" data-en="Open to collaborations and interesting projects." data-fa="آماده همکاری و پروژه‌های جالب.">Open to collaborations and interesting projects.</p>
+            <h3 class="text-h3 mb-4" data-en="Let's Connect" data-fa="اماده همکاری و برقراری ارتباط">Let's Connect</h3>
+            <p class="text-small" style="color: var(--muted-foreground);" data-en="Open to collaborations and interesting projects." data-fa="راه ارتباطی با من">Open to collaborations and interesting projects.</p>
             <p class="text-small mt-4" style="color: var(--muted-foreground);">
               <span data-en="Telegram" data-fa="تلگرام">Telegram</span> <a href="https://t.me/onewith_aklilighalb" class="magnetic-link" target="_blank" rel="noopener">@onewith_aklilighalb</a>
             </p>
@@ -1050,10 +1050,10 @@
             <div class="social-links">
               <a href="https://github.com/arashfooladi" target="_blank" rel="noopener noreferrer" class="magnetic-link">GitHub</a>
               <a href="https://linkedin.com/in/arashfooladi" target="_blank" rel="noopener noreferrer" class="magnetic-link">LinkedIn</a>
-              <a href="https://twitter.com/arashfooladi" target="_blank" rel="noopener noreferrer" class="magnetic-link">Twitter</a>
+              <a href="https://twitter.com/arashfooladiorg" target="_blank" rel="noopener noreferrer" class="magnetic-link">Twitter(X)</a>
               <a href="https://dev.to/arashfooladi" target="_blank" rel="noopener noreferrer" class="magnetic-link">Dev.to</a>
               <a href="https://hashnode.com/@arashfooladi" target="_blank" rel="noopener noreferrer" class="magnetic-link">Hashnode</a>
-              <a href="https://instagram.com/arashfooladi" target="_blank" rel="noopener noreferrer" class="magnetic-link">Instagram</a>
+              <a href="https://instagram.com/arashfooladi_" target="_blank" rel="noopener noreferrer" class="magnetic-link">Instagram</a>
             </div>
           </div>
 
