--- a/yarplus/index.html
+++ b/yarplus/index.html
@@ -358,7 +358,9 @@
   <nav class="nav">
     <div class="nav-content">
       <div class="nav-left">
-        <a href="index.html" class="nav-link" data-en="Back to Home" data-fa="بازگشت به خانه">Back to Home</a>
+        <a href="../index.html" class="nav-link" data-en="Back to Home" data-fa="بازگشت به خانه">Back to Home</a>
+        <a href="../telegram-bot" class="nav-link" data-en="Next Project" data-fa="پروژه بعدی">Next Project →</a>
+
       </div>
       <button class="lang-toggle" id="lang-toggle">FA</button>
     </div>
@@ -480,12 +482,20 @@
     <!-- Footer -->
     <footer class="footer content-wrapper">
       <div class="footer-content">
-        <a href="index.html" class="next-project-link" data-en="Back to Projects" data-fa="بازگشت به پروژه‌ها">
-          Back to Projects <span class="arrow">→</span>
-        </a>
-        <span style="font-family: var(--font-mono); font-size: var(--text-caption); color: var(--muted-foreground);" data-en="ARCHIVED 2024" data-fa="بایگانی 2025">ARCHIVED 2025</span>
+        <div>
+          <a href="../index.html" class="next-project-link" data-en="← Back to Home" data-fa="← بازگشت به خانه">
+            <span class="arrow">←</span> Back to Home
+          </a>
+        </div>
+        <div style="display: flex; gap: var(--space-32); align-items: center;">
+          <a href="../telegram-bot" class="next-project-link" data-en="Next Project →" data-fa="پروژه بعدی →">
+            Next Project <span class="arrow">→</span>
+          </a>
+          <span style="font-family: var(--font-mono); font-size: var(--text-caption); color: var(--muted-foreground);" data-en="ARCHIVED 2024" data-fa="بایگانی 2025">ARCHIVED 2025</span>
+        </div>
       </div>
     </footer>
+
 
   </main>
 
