Fix image file extensions: .jpg to .png

--- a/yarplus/index.html
+++ b/yarplus/index.html
@@ -393,7 +393,8 @@
     <!-- Main Hero Image (main1) -->
     <section class="section">
       <figure class="project-image">
-        <img src="images/main1.jpg" alt="Yarplus Platform Overview" loading="lazy">
+        <img src="images/main.png" alt="Yarplus Platform Overview" loading="lazy">
+
         <figcaption class="image-caption" data-en="Platform Dashboard" data-fa="داشبورد پلتفرم">Platform Dashboard</figcaption>
       </figure>
     </section>
@@ -448,11 +449,13 @@
     <section class="section">
       <div class="grid-2">
         <figure class="project-image">
-          <img src="images/mini1.jpg" alt="Feature Detail 1" loading="lazy">
+          <img src="images/mini1.png" alt="Feature Detail 1" loading="lazy">
+
           <figcaption class="image-caption" data-en="Creator Dashboard" data-fa="داشبورد سازنده">Creator Dashboard</figcaption>
         </figure>
         <figure class="project-image">
-          <img src="images/mini2.jpg" alt="Feature Detail 2" loading="lazy">
+          <img src="images/mini2.png" alt="Feature Detail 2" loading="lazy">
+
           <figcaption class="image-caption" data-en="Subscription Management" data-fa="مدیریت اشتراک‌ها">Subscription Management</figcaption>
         </figure>
       </div>
@@ -461,7 +464,8 @@
     <!-- Full Width Second Main Image (main2) -->
     <section class="section">
       <figure class="project-image">
-        <img src="images/main2.jpg" alt="Yarplus Architecture Overview" loading="lazy">
+        <img src="images/main2.png" alt="Yarplus Architecture Overview" loading="lazy">
+
         <figcaption class="image-caption" data-en="System Architecture" data-fa="معماری سیستم">System Architecture</figcaption>
       </figure>
     </section>
