--- a/index.html
+++ b/index.html
@@ -833,8 +833,10 @@
     @media (max-width: 640px) {
       .hero-title, html[lang="fa"] .hero-title {
         font-size: clamp(3rem, 14vw + 1rem, 4rem);
-        height: 1.1em;
+        height: auto;
+        line-height: 1.1;
       }
+
       .text-h1 {
         font-size: clamp(1.5rem, 6vw + 0.5rem, 2rem);
       }
@@ -880,8 +882,10 @@
       .hero-title, html[lang="fa"] .hero-title {
         font-size: clamp(2.5rem, 12vw + 1rem, 3.5rem);
         letter-spacing: -0.03em;
-        height: 1.1em;
+        height: auto;
+        line-height: 1.1;
       }
+
       .text-caption {
         font-size: 0.6875rem;
         letter-spacing: 0.15em;
