--- a/index.html
+++ b/index.html
@@ -837,7 +837,12 @@
         line-height: 1.1;
       }
 
+      .hero-container h1 {
+        height: auto;
+      }
+
       .text-h1 {
+
         font-size: clamp(1.5rem, 6vw + 0.5rem, 2rem);
       }
       .horizontal-scroll {
@@ -886,7 +891,12 @@
         line-height: 1.1;
       }
 
+      .hero-container h1 {
+        height: auto;
+      }
+
       .text-caption {
+
         font-size: 0.6875rem;
         letter-spacing: 0.15em;
       }
