--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <meta name="author" content="Arash Fooladi">
   <meta name="theme-color" content="#080808">
   <meta name="robots" content="index, follow">
+  <meta name="google-site-verification" content="NsWZ1pAImBkgleF3IXDSqw1f2FXsYW2e8Sn0uN_mX50" />
   
   <!-- Canonical & Hreflang -->
   <link rel="canonical" href="https://arashfooladi.ir">
